@@ -1,3 +1,7 @@
+2002-06-20  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/slur-engraver.cc: Layout fix (cvs changes ml test #3).
+
 2002-06-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* ly/engraver-init.ly (RhythmicStaffContext): add
